tests/compError/retFromVoidFunction.ucl
// compError
// error: void function returned a value
// tests/compError/retFromVoidFunction.ucl:10 -> call here
// tests/compError/retFromVoidFunction.ucl:6 -> function defined here

const test = fn() {
	ret 5;
};

test();